# tuc-rxr

./: .gitignore  .gitmodules  CMakeLists.txt  RxR.sln  RxR.sln.DotSettings
RxR/: RxR.vcxproj  RxR.vcxproj.filters  app.manifest  app.rc  chest_material.cd  grassblade_material.cd  log.txt  resource.h  sample_scene.cmap  sample_scene.xml  sample_scene_material.cd
RxR/data/Font/: licence-1001fonts  licence-devinne-swash
RxR/data/Shader/: bloom1.frag  bloom2.frag  bloom2.vert  bloom3.frag  bloom3.vert  btnSide.frag  button.frag  button.vert  color.frag  color.vert  color2.frag  color2.vert  cube.frag  cube.vert  cube_map.frag  cube_map.vert  cube_trans.frag  cube_trans.vert  disk.frag  disk.vert  fxaa.frag  fxaa.vert  hsvPicker.frag  hsvPicker.vert  hsvPickerCircle.frag  hsvPickerCircle.vert  hsvPickerSquare.frag  text.frag  text.vert  trans_end.frag  trans_end.vert
RxR/data/Shader/cube/: fragHeader.glsl  vertex.glsl
RxR/data/Shader/light/: BlockRenderer.glsl  bump.glsl  gamma.glsl
RxR/data/Shader/uniforms/: Framebuffer.glsl  Framework.glsl  Lights.glsl  MapInfo.glsl  Material.glsl  Transforms.glsl
RxR/data/Shader/unions/: Transforms.glsl
RxR/saves/editor/buckets/: christmas_lights.cd  dirt.xml  grass.cd  leaves_dark.cd  snow.cd  stone.xml  water.cd  wood_dark.cd
Source/: main.cpp
Source/Framework/: Color.h  Framework.cpp  Framework.h  GameState.h  IMetrics.h  Window.cpp  Window.h
Source/Framework/OpenGL/: Camera.cpp  Camera.h  Draw.cpp  Draw.h  Drawing.cpp  Drawing.h  Font.cpp  Font.h  FramebufferObject.cpp  FramebufferObject.h  GLObject.h  Graphics.cpp  Graphics.h  IDrawable.h  Texture.cpp  Texture.h  VolumeTextureMap.cpp  VolumeTextureMap.h  glFramebufferObject.cpp  glFramebufferObject.h  glhelper.h
Source/Framework/OpenGL/Geometry/: Mesh.cpp  Mesh.h  MeshCube.cpp  MeshCube.h  MeshLineBox.cpp  MeshLineBox.h
Source/Framework/OpenGL/Shader/: InstancingArray.cpp  InstancingArray.h  Shader.cpp  Shader.h  ShaderBloom1.h  ShaderButton.cpp  ShaderButton.h  ShaderButtonSide.cpp  ShaderButtonSide.h  ShaderColor.cpp  ShaderColor.h  ShaderColor2.h  ShaderCube.cpp  ShaderCube.h  ShaderCubeMap.cpp  ShaderCubeMap.h  ShaderCubeTrans.h  ShaderCubeUniforms.h  ShaderDisk.cpp  ShaderDisk.h  ShaderFXAA.h  ShaderHSVPicker.cpp  ShaderHSVPicker.h  ShaderHSVPickerCircle.cpp  ShaderHSVPickerCircle.h  ShaderHSVPickerSquare.cpp  ShaderHSVPickerSquare.h  ShaderTransEnd.h  UIColorPicker.h  UniformBlock.cpp  UniformBlock.h  UniformBlockFramebuffer.h  UniformBlockFramework.cpp  UniformBlockFramework.h  UniformBlockLight.cpp  UniformBlockLight.h  UniformBlockMapInfo.cpp  UniformBlockMapInfo.h  UniformBlockMaterial.cpp  UniformBlockMaterial.h  (+2 more)
Source/Framework/Sound/: MusicFile.cpp  MusicFile.h  Sound.cpp  Sound.h  SoundEffect.cpp  SoundEffect.h
Source/Framework/States/: GameState.h  StateMenu.h
Source/Framework/UI/: Callback.h  UIButton.h  UIButtonColor.h  UIButtonText.h  UICheckBox.h  UIColorPicker.h  UIContainer.h  UIContainerDraggable.h  UIContainerLister.h  UIDialog.h  UIDialogColorPicker.h  UIDialogContainerHolder.h  UIDialogInput.h  UIInputBox.h  UIInputField.h  UIItemLister.h  UILabel.h  UIMenuBar.h  UIMessageBox.h  UINumUpDown.h  UINumUpDownBlockType.h  UINumUpDownCubeShader.h  UINumUpDownEnum.h  UINumUpDownFloat.h  UINumUpDownInt.h  UINumUpDownLightSource.h  UIObject.cpp  UIObject.h  UIObjectExplorer.h  UIObjectList.h  UITabView.h  UITextBox.h  UITrackbar.h  UIWindow.h  UIWindowContainerHolder.h  WindowDesc.h  WindowLayer.h  WindowManager.h
Source/Framework/UI/Editor/: UIContainerBucket.h  UIContainerBucketFiles.h  UIContainerLightAdd.h  UIContainerLights.h  UIContainerMapSetup.h  UIContainerMaterial.h  UIDialogLights.h  UIDialogLightsAdd.h  UILightLister.h  UIWindowBuckets.h
Source/Framework/UI/Interfaces/: IClickable.h  ILabelable.h  ILableable.h  IMetrics.h  IPropValue.h  IPropValueSafe.h  ISelectable.h  IValueHolder.h  IValueHolderSafe.h
Source/Game/Client/: BucketLoader.cpp  BucketLoader.h  CubeDesc.h  CubeMaterial.h  GameEditor.cpp  GameEditor.h  LightManager.cpp  LightManager.h  MapAsset.cpp  MapAsset.h  MapChunk.cpp  MapChunk.h  RenderSystem.cpp  RenderSystem.h  ShaderMaterialHolder.cpp  ShaderMaterialHolder.h
Source/Game/Client/States/: StateDev.h  StateEditor.h  StateGame.h  StateMenu.h
Source/Game/Shared/: AssetChunk.cpp  AssetChunk.h  AssetLoader.cpp  AssetLoader.h  CharNode.cpp  CharNode.h  Character.cpp  Character.h  ChunkLoader.cpp  ChunkLoader.h  Cube.cpp  Cube.h  CubeBase.cpp  CubeBase.h  CubeChunk.cpp  CubeChunk.h  CubeDefault.cpp  CubeDefault.h  CubeDesc.cpp  CubeDesc.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GameTypes.h  LightSource.cpp  LightSource.h  Map.cpp  Map.h  MapChunk.cpp  MapChunk.h  MapLoader.cpp  MapLoader.h  MaterialLoader.cpp  MaterialLoader.h  MovementSystem.cpp  MovementSystem.h  StaticChunk.cpp  StaticChunk.h  UniformGrid.h  (+1 more)
Source/System/: Input.cpp  Input.h  Log.cpp  Log.h  System.cpp  System.h  TextFileAppender.cpp  TextFileAppender.h
Source/System/Exceptions/: Exception.h  ExceptionArgument.h  ExceptionInvalidFile.h  ExceptionInvalidOperation.h  ExceptionMissingFile.h  GLEW_Exception.h  GL_Exception.h  MIX_Exception.h  SDL_Exception.h
Source/Utility/: AABox.h  Condition.h  Date.h  Directory.cpp  Directory.h  EnumConverter.h  Exception.h  FileReader.h  FileWriter.h  GL_Exception.h  MIX_Exception.h  Mutex.h  Point.h  Point3.h  Reader.h  Rect.h  SDL_Exception.h  Synchronization.h  Thread.h  Timer.h  Tools.h  Writer.h  move_util.h  owner_ptr.h
Source/glm/gtc/: matrix_transform.inl
