cmake_minimum_required(VERSION 3.6)
project(RxR)

set(CMAKE_CXX_STANDARD 11)

# includes cmake/FindSDL2.cmake
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)



# find libraries
find_library(SDL2_LIB SDL2)
message(SDL2: ${SDL2_LIB})

find_library(SDL2_NET_LIB SDL2_Net)
message(SDL2_Net: ${SDL2_NET_LIB})

find_library(SDL2_MIXER_LIB SDL2_Mixer)
message(SDL2_Mixer: ${SDL2_MIXER_LIB})

find_library(GLEW_LIB glew)
message(glew: ${GLEW_LIB})

find_library(OPENGL_LIB OpenGL)
message(OpenGL: ${OPENGL_LIB})

find_library(FREETYPE_LIB Freetype)
message(Freetype: ${FREETYPE_LIB})



include_directories(Source/freetype Source/SDL Source Source/xml)


#[[
# Windows
if(WIN32)

# Mac OSX
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

# Linux
else()

endif()]]

set(SOURCE_FILES
        Source/dirent/dirent.h
        Source/Framework/OpenGL/Geometry/Mesh.cpp
        Source/Framework/OpenGL/Geometry/Mesh.h
        Source/Framework/OpenGL/Geometry/MeshCube.cpp
        Source/Framework/OpenGL/Geometry/MeshCube.h
        Source/Framework/OpenGL/Shader/InstancingArray.cpp
        Source/Framework/OpenGL/Shader/InstancingArray.h
        Source/Framework/OpenGL/Shader/Shader.cpp
        Source/Framework/OpenGL/Shader/Shader.h
        Source/Framework/OpenGL/Shader/ShaderBloom1.h
        Source/Framework/OpenGL/Shader/ShaderButton.cpp
        Source/Framework/OpenGL/Shader/ShaderButton.h
        Source/Framework/OpenGL/Shader/ShaderColor.cpp
        Source/Framework/OpenGL/Shader/ShaderColor.h
        Source/Framework/OpenGL/Shader/ShaderColor2.h
        Source/Framework/OpenGL/Shader/ShaderCube.cpp
        Source/Framework/OpenGL/Shader/ShaderCube.h
        Source/Framework/OpenGL/Shader/ShaderCubeMap.cpp
        Source/Framework/OpenGL/Shader/ShaderCubeMap.h
        Source/Framework/OpenGL/Shader/ShaderCubeTrans.h
        Source/Framework/OpenGL/Shader/ShaderDisk.cpp
        Source/Framework/OpenGL/Shader/ShaderDisk.h
        Source/Framework/OpenGL/Shader/ShaderFXAA.h
        Source/Framework/OpenGL/Shader/ShaderHSVPickerCircle.cpp
        Source/Framework/OpenGL/Shader/ShaderHSVPickerCircle.h
        Source/Framework/OpenGL/Shader/ShaderHSVPickerSquare.cpp
        Source/Framework/OpenGL/Shader/ShaderHSVPickerSquare.h
        Source/Framework/OpenGL/Shader/ShaderTransEnd.h
        Source/Framework/OpenGL/Shader/UniformBlock.cpp
        Source/Framework/OpenGL/Shader/UniformBlock.h
        Source/Framework/OpenGL/Shader/UniformBlockFramebuffer.h
        Source/Framework/OpenGL/Shader/UniformBlockFramework.cpp
        Source/Framework/OpenGL/Shader/UniformBlockFramework.h
        Source/Framework/OpenGL/Shader/UniformBlockLight.cpp
        Source/Framework/OpenGL/Shader/UniformBlockLight.h
        Source/Framework/OpenGL/Shader/UniformBlockMapInfo.cpp
        Source/Framework/OpenGL/Shader/UniformBlockMapInfo.h
        Source/Framework/OpenGL/Shader/UniformBlockMaterial.cpp
        Source/Framework/OpenGL/Shader/UniformBlockMaterial.h
        Source/Framework/OpenGL/Shader/UniformBlockTransforms.cpp
        Source/Framework/OpenGL/Shader/UniformBlockTransforms.h
        Source/Framework/OpenGL/stb_image/stb_image.c
        Source/Framework/OpenGL/stb_image/stb_image.h
        Source/Framework/OpenGL/Camera.cpp
        Source/Framework/OpenGL/Camera.h
        Source/Framework/OpenGL/Drawing.cpp
        Source/Framework/OpenGL/Drawing.h
        Source/Framework/OpenGL/Font.cpp
        Source/Framework/OpenGL/Font.h
        Source/Framework/OpenGL/glFramebufferObject.cpp
        Source/Framework/OpenGL/glFramebufferObject.h
        Source/Framework/OpenGL/glhelper.h
        Source/Framework/OpenGL/GLObject.h
        Source/Framework/OpenGL/Graphics.cpp
        Source/Framework/OpenGL/Graphics.h
        Source/Framework/OpenGL/IDrawable.h
        Source/Framework/OpenGL/ShaderDisk.h
        Source/Framework/OpenGL/Texture.cpp
        Source/Framework/OpenGL/Texture.h
        Source/Framework/OpenGL/VolumeTextureMap.cpp
        Source/Framework/OpenGL/VolumeTextureMap.h
        Source/Framework/Sound/MusicFile.cpp
        Source/Framework/Sound/MusicFile.h
        Source/Framework/Sound/Sound.cpp
        Source/Framework/Sound/Sound.h
        Source/Framework/UI/Editor/UIContainerBucket.h
        Source/Framework/UI/Editor/UIContainerBucketFiles.h
        Source/Framework/UI/Editor/UIContainerLightAdd.h
        Source/Framework/UI/Editor/UIContainerLights.h
        Source/Framework/UI/Editor/UIContainerMapSetup.h
        Source/Framework/UI/Editor/UIContainerMaterial.h
        Source/Framework/UI/Editor/UIDialogLights.h
        Source/Framework/UI/Editor/UIDialogLightsAdd.h
        Source/Framework/UI/Editor/UILightLister.h
        Source/Framework/UI/Editor/UIWindowBuckets.h
        Source/Framework/UI/Interfaces/IClickable.h
        Source/Framework/UI/Interfaces/ILabelable.h
        Source/Framework/UI/Interfaces/IMetrics.h
        Source/Framework/UI/Interfaces/ISelectable.h
        Source/Framework/UI/Interfaces/IValueHolder.h
        Source/Framework/UI/Interfaces/IValueHolderSafe.h
        Source/Framework/UI/Callback.h
        Source/Framework/UI/UIButton.h
        Source/Framework/UI/UIButtonColor.h
        Source/Framework/UI/UIButtonText.h
        Source/Framework/UI/UICheckBox.h
        Source/Framework/UI/UIColorPicker.h
        Source/Framework/UI/UIContainer.h
        Source/Framework/UI/UIContainerLister.h
        Source/Framework/UI/UIDialog.h
        Source/Framework/UI/UIDialogColorPicker.h
        Source/Framework/UI/UIDialogContainerHolder.h
        Source/Framework/UI/UIDialogInput.h
        Source/Framework/UI/UIInputBox.h
        Source/Framework/UI/UIInputField.h
        Source/Framework/UI/UIItemLister.h
        Source/Framework/UI/UILabel.h
        Source/Framework/UI/UIMenuBar.h
        Source/Framework/UI/UIMessageBox.h
        Source/Framework/UI/UINumUpDown.h
        Source/Framework/UI/UINumUpDownBlockType.h
        Source/Framework/UI/UINumUpDownCubeShader.h
        Source/Framework/UI/UINumUpDownEnum.h
        Source/Framework/UI/UINumUpDownFloat.h
        Source/Framework/UI/UINumUpDownInt.h
        Source/Framework/UI/UINumUpDownLightSource.h
        Source/Framework/UI/UIObject.cpp
        Source/Framework/UI/UIObject.h
        Source/Framework/UI/UIObjectExplorer.h
        Source/Framework/UI/UIObjectList.h
        Source/Framework/UI/UITabView.h
        Source/Framework/UI/UITextBox.h
        Source/Framework/UI/UITrackbar.h
        Source/Framework/UI/UIWindow.h
        Source/Framework/UI/UIWindowContainerHolder.h
        Source/Framework/UI/WindowDesc.h
        Source/Framework/UI/WindowManager.h
        Source/Framework/Color.h
        Source/Framework/Framework.cpp
        Source/Framework/Framework.h
        Source/Framework/GameState.h
        Source/Framework/Window.cpp
        Source/Framework/Window.h
        Source/freetype/freetype/config/ftconfig.h
        Source/freetype/freetype/config/ftheader.h
        Source/freetype/freetype/config/ftmodule.h
        Source/freetype/freetype/config/ftoption.h
        Source/freetype/freetype/config/ftstdlib.h
        Source/freetype/freetype/internal/services/svbdf.h
        Source/freetype/freetype/internal/services/svcid.h
        Source/freetype/freetype/internal/services/svgldict.h
        Source/freetype/freetype/internal/services/svgxval.h
        Source/freetype/freetype/internal/services/svkern.h
        Source/freetype/freetype/internal/services/svmm.h
        Source/freetype/freetype/internal/services/svotval.h
        Source/freetype/freetype/internal/services/svpfr.h
        Source/freetype/freetype/internal/services/svpostnm.h
        Source/freetype/freetype/internal/services/svpscmap.h
        Source/freetype/freetype/internal/services/svpsinfo.h
        Source/freetype/freetype/internal/services/svsfnt.h
        Source/freetype/freetype/internal/services/svttcmap.h
        Source/freetype/freetype/internal/services/svtteng.h
        Source/freetype/freetype/internal/services/svttglyf.h
        Source/freetype/freetype/internal/services/svwinfnt.h
        Source/freetype/freetype/internal/services/svxf86nm.h
        Source/freetype/freetype/internal/autohint.h
        Source/freetype/freetype/internal/ftcalc.h
        Source/freetype/freetype/internal/ftdebug.h
        Source/freetype/freetype/internal/ftdriver.h
        Source/freetype/freetype/internal/ftgloadr.h
        Source/freetype/freetype/internal/ftmemory.h
        Source/freetype/freetype/internal/ftobjs.h
        Source/freetype/freetype/internal/ftpic.h
        Source/freetype/freetype/internal/ftrfork.h
        Source/freetype/freetype/internal/ftserv.h
        Source/freetype/freetype/internal/ftstream.h
        Source/freetype/freetype/internal/fttrace.h
        Source/freetype/freetype/internal/ftvalid.h
        Source/freetype/freetype/internal/internal.h
        Source/freetype/freetype/internal/pcftypes.h
        Source/freetype/freetype/internal/psaux.h
        Source/freetype/freetype/internal/pshints.h
        Source/freetype/freetype/internal/sfnt.h
        Source/freetype/freetype/internal/t1types.h
        Source/freetype/freetype/internal/tttypes.h
        Source/freetype/freetype/freetype.h
        Source/freetype/freetype/ftadvanc.h
        Source/freetype/freetype/ftbbox.h
        Source/freetype/freetype/ftbdf.h
        Source/freetype/freetype/ftbitmap.h
        Source/freetype/freetype/ftcache.h
        Source/freetype/freetype/ftchapters.h
        Source/freetype/freetype/ftcid.h
        Source/freetype/freetype/fterrdef.h
        Source/freetype/freetype/fterrors.h
        Source/freetype/freetype/ftgasp.h
        Source/freetype/freetype/ftglyph.h
        Source/freetype/freetype/ftgxval.h
        Source/freetype/freetype/ftgzip.h
        Source/freetype/freetype/ftimage.h
        Source/freetype/freetype/ftincrem.h
        Source/freetype/freetype/ftlcdfil.h
        Source/freetype/freetype/ftlist.h
        Source/freetype/freetype/ftlzw.h
        Source/freetype/freetype/ftmac.h
        Source/freetype/freetype/ftmm.h
        Source/freetype/freetype/ftmodapi.h
        Source/freetype/freetype/ftmoderr.h
        Source/freetype/freetype/ftotval.h
        Source/freetype/freetype/ftoutln.h
        Source/freetype/freetype/ftpfr.h
        Source/freetype/freetype/ftrender.h
        Source/freetype/freetype/ftsizes.h
        Source/freetype/freetype/ftsnames.h
        Source/freetype/freetype/ftstroke.h
        Source/freetype/freetype/ftsynth.h
        Source/freetype/freetype/ftsystem.h
        Source/freetype/freetype/fttrigon.h
        Source/freetype/freetype/fttypes.h
        Source/freetype/freetype/ftwinfnt.h
        Source/freetype/freetype/ftxf86.h
        Source/freetype/freetype/t1tables.h
        Source/freetype/freetype/ttnameid.h
        Source/freetype/freetype/tttables.h
        Source/freetype/freetype/tttags.h
        Source/freetype/freetype/ttunpat.h
        Source/freetype/ft2build.h
        Source/Game/Client/States/StateDev.h
        Source/Game/Client/States/StateEditor.h
        Source/Game/Client/States/StateGame.h
        Source/Game/Client/States/StateMenu.h
        Source/Game/Client/GameEditor.cpp
        Source/Game/Client/GameEditor.h
        Source/Game/Client/LightManager.cpp
        Source/Game/Client/LightManager.h
        Source/Game/Client/MapAsset.cpp
        Source/Game/Client/MapAsset.h
        Source/Game/Client/MapChunk.cpp
        Source/Game/Client/MapChunk.h
        Source/Game/Shared/Character.cpp
        Source/Game/Shared/Character.h
        Source/Game/Shared/CharNode.cpp
        Source/Game/Shared/CharNode.h
        Source/Game/Shared/ChunkLoader.cpp
        Source/Game/Shared/ChunkLoader.h
        Source/Game/Shared/Cube.cpp
        Source/Game/Shared/Cube.h
        Source/Game/Shared/CubeBase.cpp
        Source/Game/Shared/CubeBase.h
        Source/Game/Shared/CubeDesc.cpp
        Source/Game/Shared/CubeDesc.h
        Source/Game/Shared/Game.cpp
        Source/Game/Shared/Game.h
        Source/Game/Shared/LightSource.cpp
        Source/Game/Shared/LightSource.h
        Source/Game/Shared/Map.cpp
        Source/Game/Shared/Map.h
        Source/Game/Shared/MapLoader.cpp
        Source/Game/Shared/MapLoader.h
        Source/Game/Shared/MaterialLoader.cpp
        Source/Game/Shared/MaterialLoader.h
        Source/Game/Shared/parser.h
        Source/glew/glew.h
        Source/glew/glxew.h
        Source/glew/wglew.h
        Source/glm/detail/_features.hpp
        Source/glm/detail/_fixes.hpp
        Source/glm/detail/_noise.hpp
        Source/glm/detail/_swizzle.hpp
        Source/glm/detail/_swizzle_func.hpp
        Source/glm/detail/_vectorize.hpp
        Source/glm/detail/func_common.hpp
        Source/glm/detail/func_exponential.hpp
        Source/glm/detail/func_geometric.hpp
        Source/glm/detail/func_integer.hpp
        Source/glm/detail/func_matrix.hpp
        Source/glm/detail/func_packing.hpp
        Source/glm/detail/func_trigonometric.hpp
        Source/glm/detail/func_vector_relational.hpp
        Source/glm/detail/glm.cpp
        Source/glm/detail/intrinsic_common.hpp
        Source/glm/detail/intrinsic_exponential.hpp
        Source/glm/detail/intrinsic_geometric.hpp
        Source/glm/detail/intrinsic_integer.hpp
        Source/glm/detail/intrinsic_matrix.hpp
        Source/glm/detail/intrinsic_trigonometric.hpp
        Source/glm/detail/intrinsic_vector_relational.hpp
        Source/glm/detail/precision.hpp
        Source/glm/detail/setup.hpp
        Source/glm/detail/type_float.hpp
        Source/glm/detail/type_gentype.hpp
        Source/glm/detail/type_half.hpp
        Source/glm/detail/type_int.hpp
        Source/glm/detail/type_mat.hpp
        Source/glm/detail/type_mat2x2.hpp
        Source/glm/detail/type_mat2x3.hpp
        Source/glm/detail/type_mat2x4.hpp
        Source/glm/detail/type_mat3x2.hpp
        Source/glm/detail/type_mat3x3.hpp
        Source/glm/detail/type_mat3x4.hpp
        Source/glm/detail/type_mat4x2.hpp
        Source/glm/detail/type_mat4x3.hpp
        Source/glm/detail/type_mat4x4.hpp
        Source/glm/detail/type_vec.hpp
        Source/glm/detail/type_vec1.hpp
        Source/glm/detail/type_vec2.hpp
        Source/glm/detail/type_vec3.hpp
        Source/glm/detail/type_vec4.hpp
        Source/glm/gtc/bitfield.hpp
        Source/glm/gtc/color_space.hpp
        Source/glm/gtc/constants.hpp
        Source/glm/gtc/epsilon.hpp
        Source/glm/gtc/integer.hpp
        Source/glm/gtc/matrix_access.hpp
        Source/glm/gtc/matrix_integer.hpp
        Source/glm/gtc/matrix_inverse.hpp
        Source/glm/gtc/matrix_transform.hpp
        Source/glm/gtc/noise.hpp
        Source/glm/gtc/packing.hpp
        Source/glm/gtc/quaternion.hpp
        Source/glm/gtc/random.hpp
        Source/glm/gtc/reciprocal.hpp
        Source/glm/gtc/round.hpp
        Source/glm/gtc/type_precision.hpp
        Source/glm/gtc/type_ptr.hpp
        Source/glm/gtc/ulp.hpp
        Source/glm/gtc/vec1.hpp
        Source/glm/gtx/associated_min_max.hpp
        Source/glm/gtx/bit.hpp
        Source/glm/gtx/closest_point.hpp
        Source/glm/gtx/color_space.hpp
        Source/glm/gtx/color_space_YCoCg.hpp
        Source/glm/gtx/common.hpp
        Source/glm/gtx/compatibility.hpp
        Source/glm/gtx/component_wise.hpp
        Source/glm/gtx/dual_quaternion.hpp
        Source/glm/gtx/euler_angles.hpp
        Source/glm/gtx/extend.hpp
        Source/glm/gtx/extented_min_max.hpp
        Source/glm/gtx/fast_exponential.hpp
        Source/glm/gtx/fast_square_root.hpp
        Source/glm/gtx/fast_trigonometry.hpp
        Source/glm/gtx/gradient_paint.hpp
        Source/glm/gtx/handed_coordinate_space.hpp
        Source/glm/gtx/hash.hpp
        Source/glm/gtx/integer.hpp
        Source/glm/gtx/intersect.hpp
        Source/glm/gtx/io.hpp
        Source/glm/gtx/log_base.hpp
        Source/glm/gtx/matrix_cross_product.hpp
        Source/glm/gtx/matrix_decompose.hpp
        Source/glm/gtx/matrix_interpolation.hpp
        Source/glm/gtx/matrix_major_storage.hpp
        Source/glm/gtx/matrix_operation.hpp
        Source/glm/gtx/matrix_query.hpp
        Source/glm/gtx/matrix_transform_2d.hpp
        Source/glm/gtx/mixed_product.hpp
        Source/glm/gtx/norm.hpp
        Source/glm/gtx/normal.hpp
        Source/glm/gtx/normalize_dot.hpp
        Source/glm/gtx/number_precision.hpp
        Source/glm/gtx/optimum_pow.hpp
        Source/glm/gtx/orthonormalize.hpp
        Source/glm/gtx/perpendicular.hpp
        Source/glm/gtx/polar_coordinates.hpp
        Source/glm/gtx/projection.hpp
        Source/glm/gtx/quaternion.hpp
        Source/glm/gtx/range.hpp
        Source/glm/gtx/raw_data.hpp
        Source/glm/gtx/rotate_normalized_axis.hpp
        Source/glm/gtx/rotate_vector.hpp
        Source/glm/gtx/scalar_multiplication.hpp
        Source/glm/gtx/scalar_relational.hpp
        Source/glm/gtx/simd_mat4.hpp
        Source/glm/gtx/simd_quat.hpp
        Source/glm/gtx/simd_vec4.hpp
        Source/glm/gtx/spline.hpp
        Source/glm/gtx/std_based_type.hpp
        Source/glm/gtx/string_cast.hpp
        Source/glm/gtx/transform.hpp
        Source/glm/gtx/transform2.hpp
        Source/glm/gtx/type_aligned.hpp
        Source/glm/gtx/vector_angle.hpp
        Source/glm/gtx/vector_query.hpp
        Source/glm/gtx/wrap.hpp
        Source/glm/common.hpp
        Source/glm/exponential.hpp
        Source/glm/ext.hpp
        Source/glm/fwd.hpp
        Source/glm/geometric.hpp
        Source/glm/glm.hpp
        Source/glm/integer.hpp
        Source/glm/mat2x2.hpp
        Source/glm/mat2x3.hpp
        Source/glm/mat2x4.hpp
        Source/glm/mat3x2.hpp
        Source/glm/mat3x3.hpp
        Source/glm/mat3x4.hpp
        Source/glm/mat4x2.hpp
        Source/glm/mat4x3.hpp
        Source/glm/mat4x4.hpp
        Source/glm/matrix.hpp
        Source/glm/packing.hpp
        Source/glm/trigonometric.hpp
        Source/glm/vec2.hpp
        Source/glm/vec3.hpp
        Source/glm/vec4.hpp
        Source/glm/vector_relational.hpp
        Source/SDL/begin_code.h
        Source/SDL/close_code.h
        Source/SDL/SDL.h
        Source/SDL/SDL_assert.h
        Source/SDL/SDL_atomic.h
        Source/SDL/SDL_audio.h
        Source/SDL/SDL_bits.h
        Source/SDL/SDL_blendmode.h
        Source/SDL/SDL_clipboard.h
        Source/SDL/SDL_config.h
        Source/SDL/SDL_cpuinfo.h
        Source/SDL/SDL_egl.h
        Source/SDL/SDL_endian.h
        Source/SDL/SDL_error.h
        Source/SDL/SDL_events.h
        Source/SDL/SDL_filesystem.h
        Source/SDL/SDL_gamecontroller.h
        Source/SDL/SDL_gesture.h
        Source/SDL/SDL_haptic.h
        Source/SDL/SDL_hints.h
        Source/SDL/SDL_joystick.h
        Source/SDL/SDL_keyboard.h
        Source/SDL/SDL_keycode.h
        Source/SDL/SDL_loadso.h
        Source/SDL/SDL_log.h
        Source/SDL/SDL_main.h
        Source/SDL/SDL_messagebox.h
        Source/SDL/SDL_mixer.h
        Source/SDL/SDL_mouse.h
        Source/SDL/SDL_mutex.h
        Source/SDL/SDL_name.h
        Source/SDL/SDL_net.h
        Source/SDL/SDL_opengl.h
        Source/SDL/SDL_opengl_glext.h
        Source/SDL/SDL_opengles.h
        Source/SDL/SDL_opengles2.h
        Source/SDL/SDL_opengles2_gl2.h
        Source/SDL/SDL_opengles2_gl2ext.h
        Source/SDL/SDL_opengles2_gl2platform.h
        Source/SDL/SDL_opengles2_khrplatform.h
        Source/SDL/SDL_pixels.h
        Source/SDL/SDL_platform.h
        Source/SDL/SDL_power.h
        Source/SDL/SDL_quit.h
        Source/SDL/SDL_rect.h
        Source/SDL/SDL_render.h
        Source/SDL/SDL_revision.h
        Source/SDL/SDL_rwops.h
        Source/SDL/SDL_scancode.h
        Source/SDL/SDL_shape.h
        Source/SDL/SDL_stdinc.h
        Source/SDL/SDL_surface.h
        Source/SDL/SDL_system.h
        Source/SDL/SDL_syswm.h
        Source/SDL/SDL_test.h
        Source/SDL/SDL_test_assert.h
        Source/SDL/SDL_test_common.h
        Source/SDL/SDL_test_compare.h
        Source/SDL/SDL_test_crc32.h
        Source/SDL/SDL_test_font.h
        Source/SDL/SDL_test_fuzzer.h
        Source/SDL/SDL_test_harness.h
        Source/SDL/SDL_test_images.h
        Source/SDL/SDL_test_log.h
        Source/SDL/SDL_test_md5.h
        Source/SDL/SDL_test_random.h
        Source/SDL/SDL_thread.h
        Source/SDL/SDL_timer.h
        Source/SDL/SDL_touch.h
        Source/SDL/SDL_types.h
        Source/SDL/SDL_version.h
        Source/SDL/SDL_video.h
        Source/System/Exceptions/Exception.h
        Source/System/Exceptions/ExceptionArgument.h
        Source/System/Exceptions/ExceptionInvalidFile.h
        Source/System/Exceptions/ExceptionInvalidOperation.h
        Source/System/Exceptions/ExceptionMissingFile.h
        Source/System/Exceptions/GL_Exception.h
        Source/System/Exceptions/GLEW_Exception.h
        Source/System/Exceptions/MIX_Exception.h
        Source/System/Exceptions/SDL_Exception.h
        Source/System/Input.cpp
        Source/System/Input.h
        Source/System/Log.cpp
        Source/System/Log.h
        Source/System/System.cpp
        Source/System/System.h
        Source/System/TextFileAppender.cpp
        Source/System/TextFileAppender.h
        Source/Utility/Condition.h
        Source/Utility/Date.h
        Source/Utility/Directory.cpp
        Source/Utility/Directory.h
        Source/Utility/EnumConverter.h
        Source/Utility/Exception.h
        Source/Utility/FileReader.h
        Source/Utility/FileWriter.h
        Source/Utility/move_util.h
        Source/Utility/Mutex.h
        Source/Utility/owner_ptr.h
        Source/Utility/Point.h
        Source/Utility/Point3.h
        Source/Utility/Reader.h
        Source/Utility/Rect.h
        Source/Utility/Thread.h
        Source/Utility/Timer.h
        Source/Utility/Tools.h
        Source/Utility/Writer.h
        Source/xml/tinyxml2.cpp
        Source/xml/tinyxml2.h
        Source/main.cpp)

add_executable(RxR ${SOURCE_FILES})
set_target_properties(RxR PROPERTIES COMPILE_DEFINITIONS "_CLIENT")
target_link_libraries(RxR ${SDL2_LIB} ${SDL2_NET_LIB} ${SDL2_MIXER_LIB} ${GLEW_LIB} ${OPENGL_LIB} ${FREETYPE_LIB})
